2004-11-03  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* po/check-markup: New script: detects <b>markup<b> <b>problems<7b>
	  in the <b>translated strings.  (~10 such problems found.)
	* Makefile.am (all, check, distcheck): Run po/check-markup (with
	  varying permissiveness of errors).

2004-11-02  MenTaLguY  <mental@rydia.net>

	* doc/keys.xml: added documentation of layer keys

2004-11-01  Kees Cook  <kees@outflux.net>

	* src/dialogs/align.cpp, src/dialogs/debugdialog.cpp: localized
	some missed strings.

2004-11-01  MenTaLguY  <mental@rydia.net>

	* share/icons/icons.svg: gave bulia's eye icons ids

	* src/widgets/layer-selector.h, src/widgets/layers-selector.cpp:
	  fixed up visibility/lock toggles... now to make them actually do
	  something

2004-10-31  MenTaLguY  <mental@rydia.net>

	* src/util/glib-list.h: adaptor for glib lists

	* src/widgets/layer-selector.h, src/widgets/layer-selector.cpp:
	  save the repr next to the SPObject

2004-10-30  MenTaLguY  <mental@rydia.net>

	* src/util/list.h: more list cleanups and documentation

	* src/verbs.cpp: call sp_document_done() for layer verbs too

2004-10-30  Bryce Harrington <bryce@bryceharrington.org>

	* src/dialogs/item-properties.cpp, src/sp-object.h:  Cleaning up
	stubs, disabling some more of the desc code to prevent crash.	  
	The change to SPObject::label() broke the label editing code;
	fixing it.

2004-10-30  Kees Cook  <kees@outflux.net>

	* src/sp-metadata.cpp, src/sp-metadata.h, src/Makefile_insert,
	src/document.cpp, src/sp-object-repr.cpp, src/sp-object.cpp:
	I've created my very first SPObject!  SPMetadata is alive!  No
	more nasty hack to have it disappear from SVG Plain.  Mental
	won't have to take away my CVS access any more!  :)
	* inkscape2.nsi: update from Adib Taraben

2004-10-30  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/libnr/nr-matrix.cpp (nr_matrix_invert):
	  Fix for last commit to this file, which broke src==dest case.